--- a/index.html
+++ b/index.html
@@ -3,106 +3,104 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Mi Baby Shower</title>
+<title>Mi Baby Shower · Portada</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700;800&display=swap" rel="stylesheet">
 
 <style>
 *{box-sizing:border-box;}
+html,body{height:100%;}
 
 body{
   margin:0;
   font-family:'Poppins',system-ui,sans-serif;
-  background:#f5f9fc;
-}
-
-.page1{
-  min-height:100vh;
+  background:#eaf4fb;
   display:flex;
-  align-items:center;
   justify-content:center;
-  padding:14px;
+  padding:12px 10px;
 }
 
-.frame{
+/* ✅ “Hoja” tamaño celular (más corta / compacta) */
+.phone{
   width:100%;
-  max-width:520px;
+  max-width:390px;               /* iPhone/Android típico */
+  border-radius:26px;
+  overflow:hidden;
+  box-shadow:0 18px 60px rgba(2,20,40,.16);
+  background:#fff;
 }
 
-/* ===== TARJETA CENTRAL ===== */
+/* Fondo solo dentro */
 .card{
   position:relative;
-  overflow:visible;
-  padding:18px 16px 170px;
+  overflow:visible;               /* ✅ NO recortar pase */
+  padding:16px 14px 140px;        /* ✅ hoja más corta */
   text-align:center;
-
-  border-radius:22px;
-  box-shadow:0 18px 60px rgba(2,20,40,.14);
   background:url("img/fondo.png") center / cover no-repeat;
 }
 
-/* Capa blanca suave */
+/* Capa blanca suave para legibilidad */
 .card::before{
   content:"";
   position:absolute;
   inset:0;
-  border-radius:22px;
-  background:rgba(255,255,255,.55);
+  background:rgba(255,255,255,.50);
   z-index:0;
 }
 
-.card > *{
-  position:relative;
-  z-index:1;
-}
+.card > *{position:relative; z-index:1;}
 
-/* ===== ELEFANTE ===== */
+/* ===== Elefante (más pequeño) ===== */
 .hero{
   display:flex;
   justify-content:center;
+  margin-top:4px;
 }
 
 .hero img{
-  width:300px;
-  max-width:85%;
-  filter:drop-shadow(0 16px 32px rgba(2,20,40,.18));
+  width:240px;                    /* ✅ reducido */
+  max-width:82%;
+  display:block;
+  margin:0 auto;
+  filter:drop-shadow(0 14px 26px rgba(2,20,40,.16));
 }
 
-/* ===== TEXTO ===== */
+/* ===== Mi Baby Shower centrado ===== */
 .subtitle{
-  margin:6px auto 14px;
+  margin:4px auto 10px;           /* ✅ menos espacio */
   text-align:center;
   font-family:"Brush Script MT","Brush Script Std",cursive;
-  font-size:28px;
+  font-size:24px;
   font-weight:400;
-  letter-spacing:.5px;
+  letter-spacing:.3px;
   color:rgba(31,41,55,.85);
 }
 
-/* ===== SOBRE ===== */
+/* ===== Sobre (más pequeño) ===== */
 .envelopeWrap{
-  width:min(500px,92%);
-  margin:10px auto 0;
+  width:100%;
+  max-width:320px;                /* ✅ carta más pequeña */
+  margin:8px auto 0;
   position:relative;
   overflow:visible;
-  padding-bottom:150px;
+  padding-bottom:120px;           /* ✅ espacio para pase grande */
 }
 
 .envelopeImg{
-  width:90%;
+  width:100%;
   aspect-ratio:16/10;
-  position:relative, center;
+  position:relative;
   background:url("sobre.png") center / contain no-repeat;
 }
 
-/* TEXTO CURVO */
+/* Texto curvo (Georgia) */
 .arcText{
   position:absolute;
   left:50%;
   top:34%;
   transform:translate(-50%,-50%);
-  width:220px;
-  height:120px;
+  width:210px;
+  height:115px;
   pointer-events:none;
 }
 
@@ -112,101 +110,82 @@ body{
   letter-spacing:1px;
   text-transform:uppercase;
   fill:#1f2937;
-  font-size:14px;
+  font-size:13px;
 }
 
-/* ===== SELLO ===== */
+/* Sello (botón) */
 .sealBtn{
   position:absolute;
   left:50%;
   top:56%;
   transform:translate(-50%,-50%);
-  width:70px;
-  height:70px;
+  width:56px;                     /* ✅ un poco más pequeño */
+  height:56px;
   background:none;
   border:none;
   cursor:pointer;
+  padding:0;
 }
 
 .sealBtn img{
   width:100%;
   height:100%;
   object-fit:contain;
-  filter:drop-shadow(0 2px 5px rgba(0,0,0,.18));
+  filter:drop-shadow(0 2px 5px rgba(0,0,0,.16));
 }
 
-/* ===== PASE ===== */
+/* ✅ Pase (más grande y sobresale) */
 .paseWrap{
   position:absolute;
   left:50%;
-  top:66%;                 /* ⬆️ SUBE EL PASE */
+  top:82%;                         /* ✅ más cerca del sobre */
   transform:translate(-50%,-50%);
   z-index:50;
 }
 
 .paseWrap img{
-  width:460px;
-  max-width:100%;
-  filter:drop-shadow(0 26px 45px rgba(0,0,0,.28));
+  width:420px;                     /* ✅ más grande */
+  max-width:132%;                  /* ✅ sobresale del sobre */
+  filter:drop-shadow(0 22px 40px rgba(0,0,0,.26));
 }
 
-/* 📱 ===== AJUSTES CELULAR ===== */
-@media (max-width: 768px){
-
-  /* Tarjeta más compacta en alto */
-  .card{
-    padding-top: 14px;
-    padding-bottom: 170px;   /* ⬆️ menos espacio vertical */
-  }
-
-  /* Elefante más pequeño */
-  .hero img{
-    width: 250px;
-    max-width: 80%;
-  }
-
-  /* Texto más compacto */
-  .subtitle{
-    margin-top: 2px;
-    margin-bottom: 8px;
-    font-size: 24px;
-    text-align: center;
-  }
-
-  /* Wrapper del sobre LIBRE para que el pase crezca */
-  .envelopeWrap{
-    width: 100%;
-    max-width: 360px;        /* controla el sobre */
-    padding-bottom: 110px;   /* espacio justo para el pase */
-  }
-
-  /* Sello un poco más pequeño */
-  .sealBtn{
-    top: 55%;
-    width: 60px;
-    height: 60px;
-  }
-
-  /* Pase más arriba y MÁS GRANDE */
-  .paseWrap{
-    top: 76%;                /* ⬆️ sube el pase */
-  }
-
-  .paseWrap img{
-    width: 460px;            /* 🔥 pase grande */
-    max-width: 135%;         /* sobresale del sobre */
-  }
+/* ===== Animación al tocar sello ===== */
+@keyframes sealPress {
+  0%   { transform: translate(-50%,-50%) scale(1); }
+  55%  { transform: translate(-50%,-50%) scale(.88); }
+  100% { transform: translate(-50%,-50%) scale(1); }
 }
-  
+@keyframes envelopeBounce {
+  0%   { transform: scale(1); }
+  35%  { transform: scale(1.02); }
+  70%  { transform: scale(.995); }
+  100% { transform: scale(1); }
+}
+@keyframes pageFade {
+  from { opacity: 1; }
+  to   { opacity: 0; }
+}
+
+.sealBtn.is-pressed{ animation: sealPress 320ms ease-out; }
+.envelopeImg.is-opening{
+  transform-origin:center;
+  animation: envelopeBounce 420ms cubic-bezier(.2,.9,.2,1);
+}
+.card.is-fading{ animation: pageFade 240ms ease-in forwards; }
+
+/* Extra: pantallas muy pequeñas */
+@media (max-width:360px){
+  .hero img{ width:220px; }
+  .subtitle{ font-size:23px; }
+  .envelopeWrap{ max-width:300px; }
+  .paseWrap img{ width:390px; max-width:138%; }
+}
 </style>
 </head>
 
 <body>
-
-<section class="page1">
-  <div class="frame">
-    <div class="card">
-
+  <div class="phone">
+    <section class="card" id="card">
       <!-- Elefante -->
       <div class="hero">
         <img src="img/elefante-nombre.png" alt="Elefantito">
@@ -217,10 +196,10 @@ body{
 
       <!-- Sobre + Pase -->
       <div class="envelopeWrap">
+        <div class="envelopeImg" id="envelopeImg" aria-label="Sobre">
 
-        <div class="envelopeImg">
-
-          <svg class="arcText" viewBox="0 0 220 120">
+          <!-- Texto curvo -->
+          <svg class="arcText" viewBox="0 0 220 120" aria-hidden="true">
             <defs>
               <path id="arcPath" d="M 28 96 Q 110 20 192 96"/>
             </defs>
@@ -231,27 +210,48 @@ body{
             </text>
           </svg>
 
-          <button class="sealBtn" onclick="goNext()">
-            <img src="img/sello.png" alt="Sello">
+          <!-- Sello -->
+          <button class="sealBtn" id="sealBtn" type="button" aria-label="Ver invitación">
+            <img src="img/sello.png" alt="Sello luna">
           </button>
 
         </div>
 
+        <!-- Pase -->
         <div class="paseWrap">
           <img src="img/pase.png" alt="Pase personal">
         </div>
-
       </div>
-
-    </div>
+    </section>
   </div>
-</section>
 
 <script>
-function goNext(){
-  window.location.href="invitacion.html";
-}
-</script>
+  const nextUrl = "invitacion.html"; // hoja 2
 
+  function goNext(){
+    const sealBtn = document.getElementById("sealBtn");
+    const envelopeImg = document.getElementById("envelopeImg");
+    const card = document.getElementById("card");
+
+    if(!sealBtn || !envelopeImg || !card){
+      window.location.href = nextUrl;
+      return;
+    }
+
+    if(sealBtn.dataset.busy === "1") return;
+    sealBtn.dataset.busy = "1";
+
+    sealBtn.classList.add("is-pressed");
+    envelopeImg.classList.add("is-opening");
+
+    setTimeout(() => card.classList.add("is-fading"), 180);
+    setTimeout(() => window.location.href = nextUrl, 420);
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    const sealBtn = document.getElementById("sealBtn");
+    if(sealBtn) sealBtn.addEventListener("click", goNext);
+  });
+</script>
 </body>
 </html>
